# estrutura_workshop

./: .pre-commit-config.yaml  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  teste_request.py
app/pipeline/: extract.py  load.py  transform.py
data/output/: output.xlsx
tests/: test_pipeline.py
